[package]
name = "zdb"
version = "0.1.0"
authors = ["clickingbuttons"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
fnv = "1.0.7"
memmap = "0.7.0"
rand = "0.7.3"

[[bench]]
name = "write"

[profile.release]
debug = true
