[package]
name = "zdb"
version = "0.1.0"
authors = ["clickingbuttons"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core date handling
chrono = "0.4"
# Hashmap for symbols
fnv = "1.0"
# Cross-platform `mmap`. TODO: Replace with windows/linux/*nix implementations
memmap = "0.7.0"
# Parsing config and metadata files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Parsing+executing Julia queries
libc = "0.2.0"
nix = "0.20.0"
# Testing
fastrand = "1.4.0"

[[bench]]
name = "write"

[profile.release]
debug = true
